--- a/body/mybib1.bib
+++ b/body/mybib1.bib
@@ -67,3 +67,18 @@
   year={1996},
   publisher={Springer}
 }
+@article{avila2009ten,
+  title={The ten martini problem},
+  author={Avila, Artur and Jitomirskaya, Svetlana},
+  journal={Annals of Mathematics},
+  pages={303--342},
+  year={2009},
+  publisher={JSTOR}
+}
+@book{duarte2016lyapunov,
+  title={Lyapunov exponents of linear cocycles: continuity via large deviations},
+  author={Duarte, Pedro and Klein, Silvius},
+  volume={3},
+  year={2016},
+  publisher={Springer}
+}
