--- a/body/sec4.tex
+++ b/body/sec4.tex
@@ -13,7 +13,7 @@ and note that since $V$ is bounded, by \eqref{sigma} we have there exists $ M>0$
 \]
 Pick $K$ big enough such that
   \[M^{\frac{1}{K}}<L\]
-Let$ \sigma>0$ be such that
+Let $\sigma>0$ be such that
 \begin{equation}\label{K}
 M^{\frac{1}{K}}\leq L-\sigma<L
 \end{equation}
@@ -105,7 +105,7 @@ is in contradiction with \eqref{epsilon1} and \eqref{K}
 For $(3)$, with \eqref{epsilon1} and \eqref{K}
 \[
 % \begin{aligned}
-  \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}\leq M^{\frac{2n}{K}}\leq (L-\sigma)^{2n}\leq(e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)}-\sigma)^{2n}
+  \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}\leq M^{\frac{2n}{K}}\leq (L-\sigma)^{2n}\leq(e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)}-\sigma)^{2n},
 % \end{aligned}
 \]
 also a contradiction.
