--- a/body/sec6.tex
+++ b/body/sec6.tex
@@ -61,3 +61,15 @@ So  $C_\epsilon=\max\{C_{1\epsilon},C_{2\epsilon},1\}$ would work.
  % If $l$ is $(\mu-8\epsilon_0,n,E,\omega)$-singular, then $x$ is $(\mu-8\epsilon_0,n,E,\omega)$-regular.
  %
  % Let $\varphi_E$ be the normalized eigenfunction of $E$. For any $|x-l|=2n+1$, $n>N_{l,E,\omega}$, $ |\varphi_E(x)|\leq e^{-C|x-l|}$, for some $C=>0$.
+
+
+
+ % \begin{remark}\label{N3}
+ %  Similar to remark \ref{N1}, we can get $\Omega_3(l)$, $N_3(l,\omega)$ instead, and get that for $a.e.\omega$, (We denote this set as $\Omega_{N_3}$,)  there exists $L_3(\omega)$, such that for any $|l|>L_3$, $N_3(l,\omega)\leq \ln^2 |l|$.
+ % \end{remark}
+
+
+ % \begin{remark}\label{N1}
+ %   Note that we can actually shift the operator and use center point $l$ instead of $0$. Then we will get $\Omega_1(l)$ instead of $\Omega_1$, $N_1(l,\omega)$ instead of $N_1(\omega)$. And if we pick $N_1(l,\omega)$ in the theorem as the smallest interger satisfying the conclusion, we can estimate when will $N_1(l,\omega)\leq \ln^2 |l|$, which is very useful in the proof for dynamical localization in section 6.
+ %   In fact, $\mathbb{P}\{\omega: N_1(l,\omega)>\ln^2 |l|\}\leq C' e^{-\delta_0(2|\ln^2|l|+1)}$, By Borel-Cantelli, for $a.e.\omega$,(We denote this set as $\Omega_{N_1}$,) there exists $L_1(\omega)$, such that for any $|l|>L_1(\omega)$, $N_1(l,\omega)\leq \ln^2|l|$.
+ % \end{remark}
