--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,9 @@
 % \cite{bucaj2017localization}
 % \cite{craig1983subharmonicity}
 % \cite{tsay1999some}
+% \cite{avila2009ten}
+% \cite{duarte2016lyapunov}
+
 \bibliographystyle{unsrt}
 \bibliography{body/mybib1}
 
